# me433

./: pi.txt
bme280_spi/: CMakeLists.txt
hw11/: capture.py  find_line.py
hw12/: CMakeLists.txt  hw12.c
hw13/test/: test.c
hw13/usb_dev_hid_composite/: CMakeLists.txt  main.c
hw14/: dsp.ipynb
hw16/: CMakeLists.txt  hw16.c
hw2/: CMakeLists.txt  blink.c
hw3/: CMakeLists.txt  hw3.c
hw4/: CMakeLists.txt  IMG_4339.jpg:Zone.Identifier  hw4.c
hw5/: CMakeLists.txt  hw5.c
hw6/: CMakeLists.txt  font.h  hw6.c
hw7/: CMakeLists.txt  c.sh  hw7.c  ssd1306.c  ssd1306.h  uart.c
hw9/: CMakeLists.txt  hw9.c
test/: CMakeLists.txt
